fix(components): add z-index to shape in Partners for Home

--- a/src/components/pages/home/partners/partners.module.scss
+++ b/src/components/pages/home/partners/partners.module.scss
@@ -328,6 +328,7 @@
   position: absolute;
   bottom: -200px;
   left: 1025px;
+  z-index: -1;
   width: calc(265px + #{$container-side-gap});
   min-width: 580px;
   height: 530px;
